# openApi/dashboard-api-docs.json
@@ -710,16 +710,6 @@
             "schema": {
               "type": "string"
             }
-          },
-          {
-            "name": "realm",
-            "in": "query",
-            "description": "The domain for which the requested token is valid",
-            "required": true,
-            "style": "form",
-            "schema": {
-              "type": "string"
-            }
           }
         ],
         "responses": {
@@ -750,7 +740,7 @@
         ]
       }
     },
-    "/users/save-user": {
+    "/users": {
       "post": {
         "tags": ["user"],
         "summary": "saveUser",
@@ -809,7 +799,7 @@
       "post": {
         "tags": ["user"],
         "summary": "search",
-        "description": "Retrieve the user for a given external id",
+        "description": "Retrieve the user for a given fiscal code",
         "operationId": "searchUsingPOST",
         "parameters": [
           {
@@ -827,7 +817,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/EmbeddedExternalIdDto"
+                "$ref": "#/components/schemas/SearchUserDto"
               }
             }
           }
@@ -1570,15 +1560,6 @@
           }
         }
       },
-      "EmbeddedExternalIdDto": {
-        "title": "EmbeddedExternalIdDto",
-        "type": "object",
-        "properties": {
-          "externalId": {
-            "type": "string"
-          }
-        }
-      },
       "IdentityTokenResource": {
         "title": "IdentityTokenResource",
         "required": ["token"],
@@ -1944,6 +1925,17 @@
           }
         }
       },
+      "SearchUserDto": {
+        "title": "SearchUserDto",
+        "required": ["fiscalCode"],
+        "type": "object",
+        "properties": {
+          "fiscalCode": {
+            "type": "string",
+            "description": "User's fiscal code"
+          }
+        }
+      },
       "SubProductResource": {
         "title": "SubProductResource",
         "required": ["id", "status", "title"],
@@ -1966,16 +1958,12 @@
       },
       "UpdateUserDto": {
         "title": "UpdateUserDto",
-        "required": ["email", "fiscalCode", "name", "surname"],
+        "required": ["email", "name", "surname"],
         "type": "object",
         "properties": {
           "email": {
             "type": "string",
             "description": "User's institutional email"
-          },
-          "fiscalCode": {
-            "type": "string",
-            "description": "User's fiscal code"
           },
           "name": {
             "type": "string",
@@ -2178,7 +2166,7 @@
       },
       "UserResource": {
         "title": "UserResource",
-        "required": ["id"],
+        "required": ["fiscalCode", "id"],
         "type": "object",
         "properties": {
           "email": {
